Add sewer content and fixed formatting

--- a/sewer-service.html
+++ b/sewer-service.html
@@ -49,7 +49,7 @@
 
     <div class="row no-gutters">
       <div class="col-sm">
-        <img id="epsdPic" class="center" src="./Images/Global/economy-plumbing-sewer-drain.jpg"
+        <img id="epsdPic" class="centerCSS" src="./Images/Global/economy-plumbing-sewer-drain.jpg"
           alt="economy plumbing sewer and drain" />
       </div>
     </div>
@@ -141,7 +141,118 @@
     <!-- BODY CONTENT -->
     <div class="row">
       <div class="col-sm">
-        <h1 class="center textcenter">Sewer Service</h1>
+        <div id="page-body">
+          <h1 id="page-title">Sewer Services</h1>
+          <span class="lh-content">
+            <div>
+              <p>We are specializing in sewer cleaning, repair and replacement. Economy is ready to respond 24/7. We
+                will diagnose and resolve your sewer and drain problems quickly and professionally. Our plumbing
+                technicians use the latest technology and products to get the job done right.</p>
+
+              <h5 class="pBold text-dark">Trenchless Sewer Replacement</h5>
+
+              <div id="page-body-sewer">
+                <p class="pBold">Choosing A Trenchless Sewer</p>
+
+                <p>Economy provides video inspection technology to evaluate the condition of sewer pipes. This
+                  technology enables our customers to make an informed decision regarding the option of sewer repair or
+                  replacement. The option to replace old sewer pipes requires either a traditional (open cut) method, or
+                  a (high performance) method. The traditional “open cut” method requires that surrounding area be dug
+                  up, removed, and then repaired or replaced. However, with a “high performance” trenchless method,
+                  repairs are made quickly with minimal disruption to landscaped yards, driveways, parking lots,
+                  sidewalks and streets.</p>
+
+                <p class="pBold">Thoughts To Consider</p>
+
+                <p>When deciding whether to repair or replace your sewer, there are a few things to consider. Repair to
+                  your system may be an option “only” if your sewer has a reasonable life expectancy and is sized
+                  properly for your home. The system will also show very little or no sign of root intrusion.
+                  <br /><br />However replacement becomes necessary when your sewer is bellied, damaged, or has
+                  collapsed. These factors signify that your sewer is well past its life expectancy. Other issues which
+                  dictate the need for replacement will be if the pipes are overrun with roots, or the system has become
+                  too small due to upgrades and home improvements.</p>
+
+                <p class="pBold">Benefits and Installation</p>
+
+                <p>Trenchless pipe replacement system eliminates costly “open cut” techniques. “Open cuts” destroy
+                  landscaping and hard surface areas such driveways. Trenchless systems eliminate the need for
+                  continuous maintenance and or temporary linings.
+                  <br /><br />This technology only requires the digging of only two holes. One hole is dug where the
+                  sewer system is located. Another hole is dug where the sewer line connects to the mainline. These two
+                  holes allow for a steel cable to be threaded through the old sewer pipe. The steel cable is then
+                  attached to a polyethylene pipe, and is pulled through the old pipe-work towards the street. As the
+                  new pipe is pulled through it causes the old pipe to break apart. The debris from the old pipe is
+                  forced into the surrounding soil. When the new pipe reaches the street side connection point, the
+                  mainline sewer pipe is reconnected with the new pipe-work. Finally, inspections are then made and
+                  holes are backfilled.</p>
+
+                <p class="pBold">Expectations</p>
+
+                <p class="pBold">How long does it take to install a Trenchless system?</p>
+
+                <p>Typically this process will last just a couple of days, from the initial field preparations through
+                  to the final connections and inspection.
+                  <br /><br />What is the replacement pipe made from? Trenchless systems typically call for HDPE (High
+                  Density Polyethylene Pipe). HDPE is superior to PVC piping, clay piping, or cast iron piping. HDPE is
+                  corrosion resistant, leak tight (because joints are fused together) and highly flexible, making HDPE
+                  the choice product for Trenchless installations.</p>
+
+                <p class="pBold">Will my new sewer pipes last a long time?</p>
+
+                <p>HDPE life expectancy is estimated to be approximately 200 years. By installing the highest quality
+                  products, combined with proper installation techniques, we can guarantee that your Trenchless pipe
+                  system will last and last!</p>
+
+                <p class="pBold">Will a Trenchless system save money?</p>
+
+                <p>Trenchless is Economy’s answer to costly landscape, driveway, and concrete repairs caused by using
+                  “open cut” trenching methods.</p>
+
+                <p class="pBold">Free Estimate</p>
+
+                <p>Call now to schedule a convenient appointment. We will provide you with a free video inspection with
+                  any job done and a free & competitive estimate.</p>
+              </div>
+
+              <h5 class="pBold text-dark">The roots in your clogged sewer line</h5>
+              <div id="page-body-sewer">
+                <p>Beautiful Shade trees lining many properties are often the prime suspects in clogged sewer lines. Sewer
+                  lines contain a constant flow of warm nutrient rich material, which the trees root systems naturally
+                  seek. Once the root system finds this source the roots will find their way into the sewer lines through
+                  tiny cracks and loose joints. Clay pipe systems are porous and highly susceptible to root invasion and
+                  subsequent damage. While newer concrete and PVC pipes are stronger and a bit more difficult for the root
+                  systems to invade, they are by no means impervious to this mighty invader.</p>
+
+                <p class="pBold">We’re Available</p>
+                <p>Need an appointment? Scheduling is easy, we will accommodate a time that best serves your needs. </p>
+
+                <p class="pBold">Signs To Watch For</p>
+
+                <p class="pBold">Is your toilet emitting gurgling sounds or drainage system slowing down?</p>
+
+                <p>This could be due to root invasion. Once the root system has found its way to the sewer line, and
+                  subsequently into the pipes themselves, tiny fiber like shoots will spread throughout the pipe looking
+                  very much like spider webs. These tiny intricate webs of roots will begin to catch debris and cause slow
+                  drainage in the lines bogging things down.</p>
+
+                <p class="pBold">Other Causes </p>
+
+                <p>Our ever shifting California landscape and age related deterioration are constant stressors on a sewer
+                  line. While older systems are more susceptible, even new materials can be over taxed by frequent earth
+                  movement and causing them to buckle or break. Non-dissolving foreign objects will also find their way
+                  into a system and become logged at a joint or turn. This choke point will then collect debris and
+                  eventually slow the system down.</p>
+
+                <p class="pBold">The Solution</p>
+
+                <p>Economy Sewer and Drain will provide a <span class="pBold">video sewer inspection</span> to identify
+                  the source of the problem. Because video inspections identify structural conditions of lateral pipes,
+                  this eliminates the guess work and expensive explorative plumbing practices. Repairs are made quickly
+                  and economically. Often times a simple high pressure flushing will fix the problem of clogged sewer.</p>
+              </div>
+            </div>
+          </span>
+        </div>
       </div>
     </div>
 
@@ -190,23 +301,26 @@
 
     <div id="footer" class="row">
       <div id="footer-b" class="col-sm">
-        <p class="center">
+        <p class="centerCSS">
           <a data-toggle="tooltip" data-placement="top" title="Facebook Page"
-            href="https://www.facebook.com/pages/Economy-Plumbing/177792368930707" target="_blank"> <img class="footerImg"
-              src="./Images/Global/facebook.png" alt="Facebook" /> </a>
+            href="https://www.facebook.com/pages/Economy-Plumbing/177792368930707" target="_blank"> <img
+              class="footerImg" src="./Images/Global/facebook.png" alt="Facebook" /> </a>
           <a data-toggle="tooltip" data-placement="top" title="BBB Page"
             href="https://www.bbb.org/us/ca/daly-city/profile/plumber/economy-plumbing-sewer-drain-1116-548026"
             target="_blank"> <img id="bbb-footer" class="footerImg" src="./Images/Global/bbb.png" alt="BBB" /> </a>
           <a data-toggle="tooltip" data-placement="top" title="Twitter Page" href="https://twitter.com/#!/EconomySF"
             target="_blank"> <img class="footerImg" src="./Images/Global/twitter.png" alt="Twitter" /> </a>
         </p>
-        <p id="copyright" class="center">
+        <p id="copyright" class="centerCSS">
           Economy Plumbing Sewer and Drain • San Francisco, California • License # 707695
         </p>
-        
-      </div> <!--Col-->
-    </div> <!--Row-->
-  </div> <!--Container-->
+
+      </div>
+      <!--Col-->
+    </div>
+    <!--Row-->
+  </div>
+  <!--Container-->
 </body>
 
 </html>
