Add Energy Saving Tips and format

--- a/energy-savings.html
+++ b/energy-savings.html
@@ -49,7 +49,7 @@
 
     <div class="row no-gutters">
       <div class="col-sm">
-        <img id="epsdPic" class="center" src="./Images/Global/economy-plumbing-sewer-drain.jpg"
+        <img id="epsdPic" class="centerCSS" src="./Images/Global/economy-plumbing-sewer-drain.jpg"
           alt="economy plumbing sewer and drain" />
       </div>
     </div>
@@ -141,7 +141,60 @@
     <!-- BODY CONTENT -->
     <div class="row">
       <div class="col-sm">
-        <h1 class="center textcenter">Energy Saving</h1>
+        <div id="page-body">
+          <h1 id="page-title">Energy Saving Tips</h1>
+          <span>
+            <img id="drain-world" src="./Images/Energy/drain-world.jpg" alt="World hanging out with drain">
+            <div class="lh-content">
+              <p>
+                Our company believes in saving our clients money. In our current economy and fragile environment we need
+                to find ways to not only save money but our resources too. Check out our recommendations and tips.
+              </p>
+
+              <p>
+                Know where your water shutoff valve is. Everyone in your family should know where it is located in the
+                event of a sudden pipe or hose leak.
+              </p>
+
+              <p>
+                To prevent possible flooding when you go on vacation, turn off the water main. Your home has two types
+                of water valves: the gate valve and the ball valve. The gate valve is recognizable by its round handle
+                which must be turned a number of times clockwise to turn off the water. The ball valve is recognized by
+                its single handle that needs to be turned a or 90 degrees to close.
+              </p>
+
+              <p>
+                Look at your water bill. When you compare monthly usage figures you may be tipped off to a possible leak
+                before it becomes a big problem. Note too, that major unexplained fluctuations in your water bill will
+                signify a necessary inspection for a water leak.
+              </p>
+
+              <p>
+                Take steps to cut water usage. Install faucet aerators, low-flow showerheads and low flush toilets.
+                Close to 20% of California's electricity is used to treat, transport and pump water.
+              </p>
+
+              <p>
+                Always buy ENERGY STAR qualified products they are up to 40% more efficient. Ask our technicians for
+                possible rebates and incentives that are being offered in the area.
+              </p>
+
+              <p>
+                Turn your water heater down to 120° or the "Normal" setting, and when you're away set it to the lowest
+                setting. Water heating accounts for about 13% of home energy costs.
+              </p>
+
+              <p>
+                When possible, wash your clothes in cold water. 90% of energy usage of a clothes washer goes to heating
+                the water.
+              </p>
+
+              <p>
+                Run your dishwasher and clothes washer only when fully loaded. Fewer loads reduces energy and water use.
+              </p>
+            </div>
+          </span>
+        </div>
       </div>
     </div>
 
@@ -190,23 +243,26 @@
 
     <div id="footer" class="row">
       <div id="footer-b" class="col-sm">
-        <p class="center">
+        <p class="centerCSS">
           <a data-toggle="tooltip" data-placement="top" title="Facebook Page"
-            href="https://www.facebook.com/pages/Economy-Plumbing/177792368930707" target="_blank"> <img class="footerImg"
-              src="./Images/Global/facebook.png" alt="Facebook" /> </a>
+            href="https://www.facebook.com/pages/Economy-Plumbing/177792368930707" target="_blank"> <img
+              class="footerImg" src="./Images/Global/facebook.png" alt="Facebook" /> </a>
           <a data-toggle="tooltip" data-placement="top" title="BBB Page"
             href="https://www.bbb.org/us/ca/daly-city/profile/plumber/economy-plumbing-sewer-drain-1116-548026"
             target="_blank"> <img id="bbb-footer" class="footerImg" src="./Images/Global/bbb.png" alt="BBB" /> </a>
           <a data-toggle="tooltip" data-placement="top" title="Twitter Page" href="https://twitter.com/#!/EconomySF"
             target="_blank"> <img class="footerImg" src="./Images/Global/twitter.png" alt="Twitter" /> </a>
         </p>
-        <p id="copyright" class="center">
+        <p id="copyright" class="centerCSS">
           Economy Plumbing Sewer and Drain • San Francisco, California • License # 707695
         </p>
-        
-      </div> <!--Col-->
-    </div> <!--Row-->
-  </div> <!--Container-->
+
+      </div>
+      <!--Col-->
+    </div>
+    <!--Row-->
+  </div>
+  <!--Container-->
 </body>
 
 </html>
