Add content and formating for About us page

--- a/about-san-francisco-economy-plumbing.html
+++ b/about-san-francisco-economy-plumbing.html
@@ -49,7 +49,7 @@
 
     <div class="row no-gutters">
       <div class="col-sm">
-        <img id="epsdPic" class="center" src="./Images/Global/economy-plumbing-sewer-drain.jpg"
+        <img id="epsdPic" class="centerCSS" src="./Images/Global/economy-plumbing-sewer-drain.jpg"
           alt="economy plumbing sewer and drain" />
       </div>
     </div>
@@ -141,7 +141,62 @@
     <!-- BODY CONTENT -->
     <div class="row">
       <div class="col-sm">
-        <h1 class="center textcenter">About Us</h1>
+        <div id="page-body">
+          <h1 id="page-title">About Us</h1>
+          <div class="lh-content">
+            <p>
+              We are committed to bring high quality plumbing service at at the most competitive prices around in San
+              Francisco and San Francisco Bay Area. We have been a San Francisco plumbing company over 30 years. We have
+              the experience, knowledge and professionalism to get your plumbing problem solved the right way. Our
+              expertise in plumbing service includes residential plumbing, restaurant plumbing, apartment buildings and
+              commercial plumbing.
+            </p>
+            <p>
+              Our company takes care of sewer repair and maintenance, drain installation and repair as well as finish
+              plumbing and fixture installments such as toilets, bath tubs, sinks and vents. You’ll appreciate our fast,
+              reliable and efficient service. We are readily available for any plumbing or drain problem, every day of
+              the week.
+            </p>
+            <p>
+              We want to make sure we meet 100% customer satisfaction. We welcome your feed back. Please let us know
+              your comments, suggestions and appreciations.
+            </p>
+
+              <span class="font-weight-bold">Call us for:</span>
+              <ul>
+              <li>
+                24 HOUR EMERGENCY SERVICE - FREE ESTIMATES
+              </li>
+              <li>
+                Faucet & Sink Repair & Installation
+              </li>
+              <li>
+                Sewers Repaired & Replaced including Trenchless Sewers
+              </li>
+              <li>
+                Clogged Drains
+              </li>
+              <li>
+                Water Heater Repair & Installation including Tankless Water Heaters
+              </li>
+              <li>
+                Video Pipe Inspection
+              </li>
+              <li>
+                Leak Detection
+              </li>
+              <li>
+                Copper Pipe Repair & Installation
+              </li>
+              <li>
+                Gas Pipe Repair & Installation
+              </li>
+              <li>
+                All work is performed to California Building Code specifications.
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -190,23 +245,26 @@
 
     <div id="footer" class="row">
       <div id="footer-b" class="col-sm">
-        <p class="center">
+        <p class="centerCSS">
           <a data-toggle="tooltip" data-placement="top" title="Facebook Page"
-            href="https://www.facebook.com/pages/Economy-Plumbing/177792368930707" target="_blank"> <img class="footerImg"
-              src="./Images/Global/facebook.png" alt="Facebook" /> </a>
+            href="https://www.facebook.com/pages/Economy-Plumbing/177792368930707" target="_blank"> <img
+              class="footerImg" src="./Images/Global/facebook.png" alt="Facebook" /> </a>
           <a data-toggle="tooltip" data-placement="top" title="BBB Page"
             href="https://www.bbb.org/us/ca/daly-city/profile/plumber/economy-plumbing-sewer-drain-1116-548026"
             target="_blank"> <img id="bbb-footer" class="footerImg" src="./Images/Global/bbb.png" alt="BBB" /> </a>
           <a data-toggle="tooltip" data-placement="top" title="Twitter Page" href="https://twitter.com/#!/EconomySF"
             target="_blank"> <img class="footerImg" src="./Images/Global/twitter.png" alt="Twitter" /> </a>
         </p>
-        <p id="copyright" class="center">
+        <p id="copyright" class="centerCSS">
           Economy Plumbing Sewer and Drain • San Francisco, California • License # 707695
         </p>
-        
-      </div> <!--Col-->
-    </div> <!--Row-->
-  </div> <!--Container-->
+
+      </div>
+      <!--Col-->
+    </div>
+    <!--Row-->
+  </div>
+  <!--Container-->
 </body>
 
 </html>
