remove base href, remove root slash in nav href tags

--- a/drain-cleaning.html
+++ b/drain-cleaning.html
@@ -36,7 +36,7 @@
   <link rel="icon" href="favicon.png">
   <title>EconomySF</title>
   
-  <base href="https://phillipchang.github.io/economysf/">
+  <!-- <base href="https://phillipchang.github.io/economysf/"> -->
 
 </head>
 
@@ -74,26 +74,25 @@
 
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul id="navUL" class="navbar-nav mr-auto mt-2 mt-lg-0 ">
-              <li class="navBtns nav-item active"> <a class="nav-link text-dark" href="/">Home</a> </li>
+              <li class="navBtns nav-item active"> <a class="nav-link text-dark" href="index.html">Home</a> </li>
               <li class="navBtns nav-item "> <a class="nav-link text-dark"
-                  href="/plumbing-services-san-francisco.html">Services</a> </li>
+                  href="plumbing-services-san-francisco.html">Services</a> </li>
               <li class="navBtns nav-item"> <a class="nav-link text-dark"
-                  href="/residential-plumbing-service.html">Residential</a> </li>
+                  href="residential-plumbing-service.html">Residential</a> </li>
               <li class="navBtns nav-item"> <a class="nav-link text-dark"
-                  href="/commercial-plumbing.html">Commercial</a> </li>
-              <li class="navBtns nav-item"> <a class="nav-link text-dark" href="/sewer-service.html">Sewer Service</a>
+                  href="commercial-plumbing.html">Commercial</a> </li>
+              <li class="navBtns nav-item"> <a class="nav-link text-dark" href="sewer-service.html">Sewer Service</a>
               </li>
-              <li class="navBtns nav-item"> <a class="nav-link text-dark" href="/drain-cleaning.html">Drain Cleaning</a>
+              <li class="navBtns nav-item"> <a class="nav-link text-dark" href="drain-cleaning.html">Drain Cleaning</a>
               </li>
-              <li class="navBtns nav-item"> <a class="nav-link text-dark" href="/energy-savings.html">Energy Saving</a>
+              <li class="navBtns nav-item"> <a class="nav-link text-dark" href="energy-savings.html">Energy Saving</a>
               </li>
               <li class="navBtns nav-item"> <a class="nav-link text-dark"
-                  href="/about-san-francisco-economy-plumbing.html">About Us</a> </li>
+                  href="about-san-francisco-economy-plumbing.html">About Us</a> </li>
               <li class="navBtns nav-item"> <a class="nav-link text-dark"
-                  href="/testimonials-bay-area-economy-plumbing.html">Testimonials</a> </li>
+                  href="testimonials-bay-area-economy-plumbing.html">Testimonials</a> </li>
             </ul>
           </div>
-
         </nav>
       </div>
     </div>
