--- a/energy-savings.html
+++ b/energy-savings.html
@@ -26,7 +26,7 @@
   <meta property="og:url" content="https://economysf.com/energy-savings.html" />
   <meta property="og:description" content="Economy Plumbing for San Francisco." />
   <meta name="theme-color" content="#FF0000">
-  <meta property="og:image" content="/Images/Global/economy-plumbing-sewer-drain.jpg" />
+  <meta property="og:image" content="./Images/Global/economy-plumbing-sewer-drain.jpg" />
 
   <!-- Include this to make the og:image larger -->
   <meta name="twitter:card" content="summary_large_image">
@@ -93,7 +93,7 @@
                   href="testimonials-bay-area-economy-plumbing.html">Testimonials</a> </li>
             </ul>
           </div>
-          
+
         </nav>
       </div>
     </div>
